test/should-fail/jfxc1195.visage
/*
 * @test/compile-error
 */

class A{
    /*
    function doIt(x:String[]):String[]{
            return x;
    }
    */
    var doIt=function ():String[]{
            ["Visage","Rocks"];
    }
}
var obj:A = A{};

obj.doIt(["Visage","Rocks"]);
